modified tooltip: complete

--- a/cookie.html
+++ b/cookie.html
@@ -13,7 +13,6 @@
 
     <script>
       $(document).ready(function() {
-        $('[data-toggle="tooltip"]').tooltip(); 
          var sugar = 10;
          var money = 1000;
          var flour = 10;
@@ -88,6 +87,9 @@
         $('.reset').click(function(){
           location.reload();
         });
+
+        //tooltip
+        $('[data-toggle="tooltip"]').tooltip(); 
  
     });
 </script>
